
1.28     not yet released
          - show host/servicegroups only if contact has permission for at least on host/service
          - add new url parameter 'minimal' for hiding everything except the data (Pierre Mavro)
          - added documentation about common CGI parameters
          - internal changes ( removed prototype library )

1.26     Mon Mar 26 13:40:33 CEST 2012
          - show remaining minutes when using first_notification_delay
          - hide host/service selection for read-only users
          - added new config option show_backends_in_table to display site name in status table
          - added wml plugin to support ntray (and maybe other tools based on the statuswml page) (Franky Van Liedekerke)
          - cli tool:
              - implemented verbose mode with -v
          - fixed redirect in old browsers

1.24     Mon Mar 19 12:17:40 CET 2012
          - conf tool:
              - rename dependencies on object updates
              - reset reload flag on external reloads too
              - remove cached data when core config changes
              - add more shinken specific attributes
          - use current time when rescheduling checks with
            timestamp in the past to prevent breaking the latency calculation
          - fixed shinken livestatus version warning

1.22     Tue Mar  6 17:20:18 CET 2012
          - cli tool:
              - implemented setting backends with '-b'
          - use 127.0.0.1 and locahost tcp connections for local states too
          - preserve enabled themes/plugins on update via package
          - fixed packages apache config
          - fixed missing bracket on problems page
          - fixed problem with missing templates in packages
          - fixed customizing menu with insert_item()

1.20     Tue Feb 28 22:38:23 CET 2012
          - added cli tool
          - write pid file when running as fastcgi
          - show startpage when fcgid process is starting